feat: Change config for me

--- a/common/config/emacs/config.org
+++ b/common/config/emacs/config.org
@@ -16,8 +16,8 @@ Just me!
 
 #+NAME: personal-info
 #+BEGIN_SRC emacs-lisp
-  (setq user-full-name "Dustin Lyons"
-    user-mail-address "dustin@dlyons.dev")
+  (setq user-full-name "Maxence Maireaux"
+    user-mail-address "maxence@maireaux.fr")
 #+END_SRC
 
 ** Initialization
@@ -86,8 +86,8 @@ This associates our package manager with the right source (MELPA).
 
   ;; Set path for darwin
   (when (system-is-mac)
-    (setenv "PATH" (concat (getenv "PATH") ":/Users/dustin/.nix-profile/bin:/usr/bin"))
-    (setq exec-path (append '("/Users/dustin/bin" "/profile/bin" "/Users/dustin/.npm-packages/bin" "/Users/dustin/.nix-profile/bin" "/nix/var/nix/profiles/default/bin" "/usr/local/bin" "/usr/bin") exec-path)))
+    (setenv "PATH" (concat (getenv "PATH") ":/Users/flemzord/.nix-profile/bin:/usr/bin"))
+    (setq exec-path (append '("/Users/flemzord/bin" "/profile/bin" "/Users/flemzord/.npm-packages/bin" "/Users/flemzord/.nix-profile/bin" "/nix/var/nix/profiles/default/bin" "/usr/local/bin" "/usr/bin") exec-path)))
 #+END_SRC
 
 *** Counsel/Ivy framework
@@ -1133,9 +1133,9 @@ Projectile enables me to organize projects with a killer grep interface.
       (setq projectile-sort-order 'recently-active)
       (setq projectile-switch-project-action #'projectile-dired))
       (when (system-is-linux)
-        (setq projectile-project-search-path '("/home/dustin/.local/share/src/good-data-lol")))
+        (setq projectile-project-search-path '("/home/flemzord/.local/share/src/good-data-lol")))
       (when (system-is-mac)
-        (setq projectile-project-search-path '("/Users/dustin/.local/share/src/good-data-lol")))
+        (setq projectile-project-search-path '("/Users/flemzord/.local/share/src/good-data-lol")))
 
   (setq projectile-project-root-files-bottom-up '("package.json" ".projectile" ".project" ".git"))
   (setq projectile-ignored-projects '("~/.emacs.d/"))
